<resources>
    <string name="app_name">Foodering</string>
    <string name="delivery_favorite_food">Delivery favorite food</string>
    <string name="foodering_app_logo">Foodering app logo</string>
    <string name="enjoy_restaurant_food_at_home">Enjoy Restaurant Meals at Home</string>
    <string name="food">food</string>
    <string name="next">Next</string>
    <string name="login_in_your_account">Login in your account</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="facebook_logo">Facebook logo</string>
    <string name="google_logo">google logo</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="or">Or</string>
    <string name="sign_up">Don\'t have account</string>
    <string name="login_with">Login with</string>
    <string name="create_account">Create account</string>
    <string name="name">Name</string>
    <string name="signup_with">Signup with</string>
    <string name="already_have_account">Already have account</string>
    <string name="choose_your_location">Choose Your Location</string>
    <string name="choose_location">Choose Location</string>
    <string name="location_choose">to provide you with the best food experience we need permission to your device location so we can offer local delivery options and special offers.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="explore_yout_favorite_food">Explore yout favorite food</string>
    <string name="notification_icon">notification icon</string>
    <string name="popular">Popular</string>
    <string name="view_menu">View Menu</string>
    <string name="food_image">food image</string>
    <string name="food_name">Food name</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="_7">7$</string>
    <string name="cart">Cart</string>
    <string name="proceed">Proceed</string>
</resources>