<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutLoginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_background_color"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageViewSignUpActivityLogo"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="24dp"
        android:background="@color/activity_background_color"
        android:contentDescription="@string/foodering_app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/foodering_logo"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textViewSignUpDFF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/delivery_favorite_food"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/imageViewSignUpActivityLogo"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="@+id/imageViewSignUpActivityLogo"
        app:layout_constraintTop_toBottomOf="@+id/imageViewSignUpActivityLogo" />

    <TextView
        android:id="@+id/textViewSignUpAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/adlam_display"
        android:text="@string/login_in_your_account"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewSignUpDFF"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/textViewSignUpDFF"
        app:layout_constraintTop_toBottomOf="@+id/textViewSignUpDFF" />

    <EditText
        android:id="@+id/editTextSignUpEmailAddress"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:drawableLeft="@drawable/mail_outline_ic"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        app:layout_constraintEnd_toEndOf="@+id/textViewSignUpAccount"
        app:layout_constraintStart_toStartOf="@+id/textViewSignUpAccount"
        app:layout_constraintTop_toBottomOf="@+id/textViewSignUpAccount"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextLoginPassword"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/password_outline_ic"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextSignUpEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/editTextSignUpEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/editTextSignUpEmailAddress" />

    <TextView
        android:id="@+id/textViewOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/or"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextLoginPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextLoginPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextLoginPassword" />

    <TextView
        android:id="@+id/textViewLoginWith"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/adlam_display"
        android:text="@string/login_with"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewOr"
        app:layout_constraintStart_toStartOf="@+id/textViewOr"
        app:layout_constraintTop_toBottomOf="@+id/textViewOr" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/first_color"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:text="@string/login"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonFacebookSignup" />

    <Button
        android:id="@+id/buttonGoogleSignup"
        android:layout_width="150dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:drawableLeft="@drawable/google_24"
        android:fontFamily="@font/adlam_display"
        android:text="@string/google"
        app:layout_constraintEnd_toStartOf="@+id/buttonFacebookSignup"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLoginWith" />

    <Button
        android:id="@+id/buttonFacebookSignup"
        android:layout_width="150dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:drawableLeft="@drawable/facebook_24"
        android:fontFamily="@font/adlam_display"
        android:text="@string/facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonGoogleSignup"
        app:layout_constraintTop_toBottomOf="@+id/textViewLoginWith" />

    <TextView
        android:id="@+id/buttonSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/adlam_display"
        android:text="@string/sign_up"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />
</androidx.constraintlayout.widget.ConstraintLayout>