<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_background_color"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/imageViewSignUpActivityLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="24dp"
        android:background="@color/activity_background_color"
        android:contentDescription="@string/foodering_app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/foodering_logo"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textViewSignUpDFF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/delivery_favorite_food"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewSignUpActivityLogo" />

    <TextView
        android:id="@+id/textViewSignUpAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/adlam_display"
        android:text="@string/create_account"
        android:textColor="#EF5350"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSignUpDFF" />

    <EditText
        android:id="@+id/editTextSignUpName"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:drawableLeft="@drawable/person_outline_24"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textEmailAddress"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSignUpAccount"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextSignUpEmailAddress"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/mail_outline_ic"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSignUpName"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextSIgnUpPasswordProvide"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/password_outline_ic"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextSIgnUpPasswordConfirm"
        app:layout_constraintTop_toBottomOf="@+id/editTextSIgnUpPasswordConfirm" />

    <EditText
        android:id="@+id/editTextSIgnUpPasswordConfirm"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/password_outline_ic"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSignUpEmailAddress" />

    <Button
        android:id="@+id/buttonGoogleSignup"
        android:layout_width="150dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/google_24"
        android:fontFamily="@font/adlam_display"
        android:text="@string/google"
        android:textColor="#C5E1A5"
        app:layout_constraintEnd_toStartOf="@+id/buttonFacebookSignup"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSignWith" />

    <Button
        android:id="@+id/buttonFacebookSignup"
        android:layout_width="150dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/facebook_24"
        android:fontFamily="@font/adlam_display"
        android:text="@string/facebook"
        android:textColor="#C5E1A5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonGoogleSignup"
        app:layout_constraintTop_toBottomOf="@+id/textViewSignWith" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/first_color"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="@string/create_account"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonFacebookSignup" />

    <TextView
        android:id="@+id/textViewSignWith"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/signup_with"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewOr2" />

    <TextView
        android:id="@+id/textViewOr2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSIgnUpPasswordProvide" />

    <TextView
        android:id="@+id/buttonAlreadyHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/adlam_display"
        android:text="@string/already_have_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignUp" />

</androidx.constraintlayout.widget.ConstraintLayout>