<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_margin="8dp"
        android:background="@drawable/textviewshape"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageviewPopularFoodName"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/food_image"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tvPopularFoodName"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/acme"
                android:text="@string/food_name"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageviewPopularFoodName"
                app:layout_constraintStart_toEndOf="@+id/imageviewPopularFoodName"
                app:layout_constraintTop_toTopOf="@+id/imageviewPopularFoodName" />

            <TextView
                android:id="@+id/tvPopularFoodPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="42dp"
                android:fontFamily="@font/adlam_display"
                android:padding="4dp"
                android:text="@string/_7"
                android:textColor="@color/first_color"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvAddToCardPopularFood"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/addtocartshape"
                android:fontFamily="@font/adlam_display"
                android:padding="6dp"
                android:text="@string/add_to_cart"
                android:textColor="#212121"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/tvPopularFoodPrice"
                app:layout_constraintStart_toStartOf="@+id/tvPopularFoodPrice"
                app:layout_constraintTop_toBottomOf="@+id/tvPopularFoodPrice" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>