<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutStartActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewStartActivity"
        android:layout_width="280dp"
        android:layout_height="180dp"
        android:textAlignment="center"
        android:layout_marginTop="100dp"
        app:cardCornerRadius="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageViewStartActivity"
            android:layout_width="297dp"
            android:layout_height="189dp"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/food"
            app:srcCompat="@drawable/bacon_and_cheese_heaven"
            tools:ignore="VisualLintBounds" />

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/textViewStartAvtivity"
        android:layout_width="312dp"
        android:layout_height="72dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/enjoy_restaurant_food_at_home"
        android:textAlignment="center"
        android:textColor="@color/first_color"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/cardViewStartActivity"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/cardViewStartActivity"
        app:layout_constraintTop_toBottomOf="@+id/cardViewStartActivity"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/buttonStartActivity"
        android:layout_width="120dp"
        android:layout_height="58dp"
        android:layout_marginTop="80dp"
        android:backgroundTint="@color/first_color"
        android:text="@string/next"
        android:textColorLink="@color/design_default_color_primary_dark"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewStartAvtivity"
        app:layout_constraintStart_toStartOf="@+id/textViewStartAvtivity"
        app:layout_constraintTop_toBottomOf="@+id/textViewStartAvtivity" />


</androidx.constraintlayout.widget.ConstraintLayout>